Fix so we actually use the URI and call toURL() on it, rather than using the value in a roundabout way